--- a/mypage/src/index.css
+++ b/mypage/src/index.css
@@ -1,5 +1,55 @@
+html {
+  background-color: #66CC99;
+}
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
+  font-family:Helvetica, sans-serif, Georgia,SimHei;
+}
+.root{
+  margin: 0px;
+  padding: 0px;
+}
+.main{
+  /* border:1px solid black; */
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height:100%;
+}
+.nav{
+  display: block;
+  margin-top: 0px;
+  padding-top: 0px;
+}
+.nav ul {
+  margin: 0px;  
+  /* border:1px solid red; */
+  list-style: none;
+  width:100%;
+  height:35px;
+}
+.nav li{
+  list-style:none;
+  height:30px;
+  display: inline-block;
+  margin-left: 10%;
+  padding: 5px 10px;
+  /* border:1px red solid; */
+  border-radius: 5px;
+  font-size: 1.3em;
+}
+.nav li:hover{
+  background-color: #339933;
+  color:#fff;
+}
+.nav a{
+  margin:0;
   padding: 0;
-  font-family: sans-serif;
+  display: inline-block;
+  height:35px;
+  /* border: 1px solid blue; */
+}
+.nav a:hover{
+  color:white;
 }
